--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Jude Ganihu",
-  "name": "Software Engineer ",
+  "name": "Frontend Mobile Software Developer (React-Native)",
   "icons": [
     {
       "src": "favicon.ico",
